%% A-JUST Sequelize models
erDiagram
  Activities {
    int id PK
    int hr_backup_id FK
    datetime periode
    int contentieux_id FK
    int entrees
    int sorties
    int stock
    int original_entrees
    int original_sorties
    int original_stock
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  Comments {
    int id PK
    string "type"
    text comment
    int user_id FK
    int hr_backup_id FK
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  CompetenceMappings {
    int id PK
    int code_nac
    int rh_position_id
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  ContentieuxOptions {
    int id PK
    int contentieux_id FK
    double average_processing_time
    int backup_id FK
    datetime created_at
    datetime updated_at
    datetime deleted_at
    double average_processing_time_fonc
  }
  ContentieuxReferentiels {
    int id PK
    string label
    string code_import
    int parent_id
    int rank
    string value_quality_in
    string value_quality_out
    string value_quality_stock
    text help_url
    boolean compter
    int_array only_to_hr_backup
    string category
    boolean check_ventilation
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  Groups {
    int id PK
    string label
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HistoriesActivitiesUpdate {
    int id PK
    int activity_id FK
    string activity_node_updated
    int user_id FK
    float value
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HistoriesContentieuxUpdate {
    int id PK
    int backup_id FK
    int user_id FK
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRActivities {
    int id PK
    int hr_situation_id FK
    int nac_id FK
    float percent
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRBackups {
    int id PK
    string label
    boolean jirs
    boolean stat_exclusion
    int "group"
    int group_id
    int group_id_rank
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRBackupsGroups {
    int id PK
    string label
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRBackupsGroupsIds {
    int id PK
    int hr_backup_group_id FK
    int hr_backup_id FK
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRBackupsSettings {
    int id PK
    int backup_id
    string label
    string "type"
    text datas
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRCategories {
    int id PK
    string label
    int rank
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRComments {
    int id PK
    int human_id FK
    text comment
    int user_id FK
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRFonctions {
    int id PK
    string code
    string label
    int rank
    int category_id FK
    string category_detail
    datetime min_date_avalaible
    string recoded_function
    datetime created_at
    datetime updated_at
    datetime deleted_at
    boolean calculatrice_is_active
    string position
  }
  HRIndisponibilities {
    int id PK
    int hr_id FK
    int nac_id FK
    float percent
    datetime date_start
    datetime date_stop
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRSituations {
    int id PK
    int human_id FK
    float etp
    int category_id FK
    int fonction_id FK
    datetime date_start
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HRVentilations {
    int id PK
    int rh_id FK
    int nac_id FK
    float percent
    datetime date_start
    datetime date_stop
    int backup_id
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  HumanResources {
    int id PK
    string first_name
    string last_name
    string matricule
    string juridiction
    text cover_url
    datetime date_entree
    datetime date_sortie
    string registration_number
    int backup_id FK
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  Logs {
    int id PK
    int code_id
    text datas
    text datas2
    int user_id FK
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  News {
    int id PK
    text html
    string icon
    string background_color
    string text_color
    int delay_before_auto_closing
    string action_button_text
    string action_button_url
    string action_button_color
    datetime date_start
    datetime date_stop
    boolean enabled
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  NewsUserLog {
    int id PK
    int user_id FK
    int news_id FK
    string event_type
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  Notifications {
    int id PK
    text content
    string title
    int to_user_id FK
    boolean is_admin
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  OptionsBackupJuridictions {
    int id PK
    int option_backup_id FK
    int juridiction_id
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  OptionsBackups {
    int id PK
    string label
    datetime created_at
    datetime updated_at
    datetime deleted_at
    string "type"
    string status
    int user_id FK
  }
  TJ {
    int id PK
    int i_elst
    string label
    float latitude
    float longitude
    int population
    boolean enabled
    int backup_id FK
    string "type"
    int parent_id
    string ressort
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  TJDetails {
    int id PK
    int juridiction_id
    int category_id FK
    string value
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  tokens {
    int id PK
    int entity_id
    int entity_name
    text token UK
    string "type" UK
    datetime consumable_until
    int nb_consumable
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  UserFeedback {
    int id PK
    int user_id FK, UK
    int rating
    text comment
    string page
    boolean recontact
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  Users {
    int id PK
    string email
    string password
    string new_password_token UK
    int role
    int status
    string first_name
    string last_name
    string tj
    string fonction
    int category_id FK
    int nb_try_connection
    datetime first_try_connection
    int_array referentiel_ids
    int_array local_admin_ids
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  UsersAccess {
    int id PK
    int user_id FK
    float access_id
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  UserVentilations {
    int id PK
    int user_id FK
    int hr_backup_id FK
    datetime created_at
    datetime updated_at
    datetime deleted_at
  }
  Activities }o--|| ContentieuxReferentiels : "contentieux_id"
  Activities }o--|| HRBackups : "hr_backup_id"
  Comments }o--|| HRBackups : "hr_backup_id"
  Comments }o--|| Users : "user_id"
  ContentieuxOptions }o--|| ContentieuxReferentiels : "contentieux_id"
  ContentieuxOptions }o--|| OptionsBackups : "backup_id"
  HistoriesActivitiesUpdate }o--|| Activities : "activity_id"
  HistoriesActivitiesUpdate }o--|| Users : "user_id"
  HistoriesContentieuxUpdate }o--|| OptionsBackupJuridictions : "backup_id"
  HistoriesContentieuxUpdate }o--|| Users : "user_id"
  HRActivities }o--|| ContentieuxReferentiels : "nac_id"
  HRBackups ||--o| HRBackupsGroupsIds : "hr_backup_id"
  HRBackups ||--o{ HumanResources : "backup_id"
  HRBackups ||--o| TJ : "backup_id"
  HRBackups ||--o| UserVentilations : "hr_backup_id"
  HRBackupsGroupsIds }o--|| HRBackupsGroups : "hr_backup_group_id"
  HRComments }o--|| Users : "user_id"
  HRFonctions }o--|| HRCategories : "category_id"
  HRIndisponibilities }o--|| ContentieuxReferentiels : "nac_id"
  HRSituations ||--o{ HRActivities : "hr_situation_id"
  HRSituations }o--|| HRCategories : "category_id"
  HRSituations }o--|| HRFonctions : "fonction_id"
  HRVentilations }o--|| ContentieuxReferentiels : "nac_id"
  HRVentilations }o--|| HumanResources : "rh_id"
  HumanResources ||--o{ HRComments : "human_id"
  HumanResources ||--o{ HRIndisponibilities : "hr_id"
  HumanResources ||--o{ HRSituations : "human_id"
  Logs }o--|| Users : "user_id"
  News ||--o{ NewsUserLog : "news_id"
  NewsUserLog }o--|| Users : "user_id"
  Notifications }o--|| Users : "to_user_id"
  OptionsBackupJuridictions ||--o{ UserVentilations : "hr_backup_id"
  OptionsBackups ||--o{ OptionsBackupJuridictions : "option_backup_id"
  OptionsBackups }o--|| Users : "user_id"
  TJDetails }o--|| HRCategories : "category_id"
  UserFeedback }o--|| Users : "user_id"
  Users }o--|| HRCategories : "category_id"
  Users ||--o{ UsersAccess : "user_id"
  Users ||--o{ UserVentilations : "user_id"
